feat: add Workflow logic